--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>wooZbr.github.io</title>
+    </head>
     <body>
-        <h1>Hello GTA Fans</h1>
-        <hr>
+        <header>
+            <h1>Hello GTA Fans</h1> 
+        </header>
+
     </body>
 
     <style>
         body {
             background-color: rgb(32, 32, 35);
         }
+        header {
+            background-color: rgb(79, 71, 133);
+            height: 75px;
+            width: 100%;
+            position: relative;
+            top: -22px;
+            outline: rgb(79, 71, 133) solid 10px;
+        }
         h1  {
+            text-align: center;
             color: rgb(240, 240, 240);
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </html>
