--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>wooZbr.github.io</title>
+        <title>Another GTA Database</title>
     </head>
     <body>
         <header>
-            <h1>Hello GTA Fans</h1> 
+            <h1>Another GTA Database</h1> 
+            <a href="https://woozbr.github.io/gtadb/SA/vehicles.html"><h3>SA Vehicles</h3></a> 
+            <a href="https://dev.prineside.com/en/gtasa_samp_model_id/"><h3>SA Models</h3></a>
+            <h3>Other</h3>
+            
         </header>
 
     </body>
@@ -21,11 +25,23 @@
             position: relative;
             top: -22px;
             outline: rgb(79, 71, 133) solid 10px;
+            font-family: Arial, Helvetica, sans-serif;
+            color: rgb(240, 240, 240);
+        }
+        h3  {
+            position: relative;
+            width: 200px;
+            bottom: 2px;
+            margin-right: 20px;
+            display: inline;
+            text-decoration: underline solid 3px rgba(255, 255, 255, 0.2);
         }
         h1  {
             text-align: center;
+        }
+        a {
             color: rgb(240, 240, 240);
-            font-family: Arial, Helvetica, sans-serif;
+            text-decoration: none;
         }
     </style>
 </html>
