--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     </head>
     <body>
         <header>
-            <h1>Another GTA Database</h1> 
+            <h1>Another GTA Database</h1>
             <a href="https://woozbr.github.io/gtadb/SA/vehicles.html"><h3>SA Vehicles</h3></a> 
             <a href="https://dev.prineside.com/en/gtasa_samp_model_id/"><h3>SA Models</h3></a>
             <h3>Other</h3>
-            
         </header>
 
+        <div id="Content" class="Content">
+            <iframe src="home.html" width="100%" height="100%" title="Content" style="border:none;"></iframe>
+        </div>
     </body>
 
     <style>
@@ -27,6 +29,7 @@
             outline: rgb(79, 71, 133) solid 10px;
             font-family: Arial, Helvetica, sans-serif;
             color: rgb(240, 240, 240);
+            z-index: 1;
         }
         h3  {
             position: relative;
@@ -38,10 +41,20 @@
         }
         h1  {
             text-align: center;
+            position: relative;
+            top: 20px;
+            margin-top: 5px;
         }
         a {
             color: rgb(240, 240, 240);
             text-decoration: none;
+        }
+        .Content {
+            height: 2000px;
+            width: 100%;
+            position: relative;
+            top: -12px;
+            outline: rgb(22, 22, 25) 10px solid;
         }
     </style>
 </html>
