--- a/gtadb/SA/vehicles.html
+++ b/gtadb/SA/vehicles.html
@@ -1,46 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Another GTA Database</title>
+        <title>GTA Vehicles</title>
     </head>
     <body>
-        <header>
-            <h1>Another GTA Database</h1> 
-            <a href="https://woozbr.github.io/gtadb/SA/vehicles.html"><h3>SA Vehicles</h3></a> 
-            <a href="https://dev.prineside.com/en/gtasa_samp_model_id/"><h3>SA Models</h3></a>
-            <h3>Other</h3>
-        </header>
         <h1>This page is under construction</h1>
     </body>
 
     <style>
         body {
-            background-color: rgb(32, 32, 35);
-        }
-        header {
-            background-color: rgb(79, 71, 133);
-            height: 75px;
-            width: 100%;
-            position: relative;
-            top: -22px;
-            outline: rgb(79, 71, 133) solid 10px;
+            color: rgb(240, 240, 240);
+            background-color: rgb(22, 22, 25);
+            height: 100%;
             font-family: Arial, Helvetica, sans-serif;
-            color: rgb(240, 240, 240);
-        }
-        h3  {
-            position: relative;
-            width: 200px;
-            bottom: 2px;
-            margin-right: 20px;
-            display: inline;
-            text-decoration: underline solid 3px rgba(255, 255, 255, 0.2);
-        }
-        h1  {
-            text-align: center;
-        }
-        a {
-            color: rgb(240, 240, 240);
-            text-decoration: none;
         }
     </style>
 </html>
