--- a/home.html
+++ b/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Another GTA Database</title>
+        <title id="ContentTitle">Another GTA Database: Home</title>
     </head>
-    <body>
+    <body onload="loadEvents()">
             <h2 class="welcome">Welcome to our newest GTA modding Database!</h2>
             <hr>
             <div class="main_text">
