little mistake fixed

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
             <div class="main_text">
                 <h3>Why?</h3>
                 <p>Since samp wiki (and forum) goes down, I'm without a "good" place to see cars ids, so I have the ideia to make a "DB" here.</p>
-                <h3>Tomorrow i write more....</h3>
+                <p>Also,I'm new to HTML so it's a great opportunity to learn more.</p>
             </div>
     </body>
 
