--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1>Another GTA Database</h1>
-            <button type="button" id="SAVehBtn" onclick="pageChange('gtadb/SA/Vehicles.html', 'SA Vehicles')">SA Vehicles</button>
+            <button type="button" id="SAVehBtn" onclick="pageChange('gtadb/SA/vehicles.html', 'SA Vehicles')">SA Vehicles</button>
             <button type="button" id="homeBtn" onclick="pageChange('home.html', 'Home')">Home</button>
         </header>
 
