do you like my car?

--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
 <title>wooZbr on github</title>
 </head>
 <body onload="redirTo()">
-
+<img src="img/MH.jpg" class="img">MH</img>
 </body>
 
 <script>
 function redirTo() {
   location.replace("AGDB/index.html")
 }
+
 </script>
+
+<style>
+.img{
+  width: 80%;
+  height: 80%;
+}
+
+body {
+  background-color: black;
+}
+</style>
 </html>
