--- a/index.html
+++ b/index.html
@@ -3,25 +3,23 @@
 <head>
 <title>wooZbr on github</title>
 </head>
-<body onload="redirTo()">
-<img src="img/MH.jpg" class="img">MH</img>
+<body onload="">
+<img src="https://static.grainger.com/rp/s/is/image/Grainger/10AC61_AS01?$zmmain$" class="img"></img>
+<h1>to com sono</h1>
 </body>
-
-<script>
-function redirTo() {
-  location.replace("AGDB/index.html")
-}
-
-</script>
 
 <style>
 .img{
-  width: 80%;
-  height: 80%;
+  width: 20%;
+  height: 20%;
 }
 
 body {
   background-color: black;
+}
+
+.h1 {
+  color: azure;
 }
 </style>
 </html>
